[package]
name = "baze64-gui"
description = "A GUI for encoding & decoding base64"
authors = ["Clay66"]
version = "2.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/Clay-6/baze64"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baze64 = { path = "../baze64", version = "0.5.0" }
slint = "1.2.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
slint-build = "1.2.1"
