[package]
name = "baze64"
description = "Encode & decode base64 from & to arbitrary byte sequences"
authors = ["Clay66"]
keywords = ["encode", "decode", "base64"]
version = "0.3.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Clay-6/baze64"
license = "MIT"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
color-eyre = "0.6.2"
thiserror = "1.0.38"

[dev-dependencies]
pretty_assertions = "1.3.0"
