[package]
name = "baze64-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
baze64 = { path = "../" }
base64 = "0.21.4"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "base64_parity"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
